--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
+@import "tailwindcss";
+
 *{
     background-color: #121212;
     color: white;
-    text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
