--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,14 @@
 @import "tailwindcss";
 
 *{
-    background-color: #121212;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+    
+}
+}
+
+body{
+    background-color: #000000;
+
 }
